--- a/image-generation-client/package.json
+++ b/image-generation-client/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:selenium": "node ./tests/seleniumTest.js"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "selenium-webdriver": "^4.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "jest": "^29.7.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
